--- a/3.Database.md
+++ b/3.Database.md
@@ -785,9 +785,12 @@ $user_comments = User::find(1)->comments;
 
 # Eagerロードによるモデル取得
 
-> よく取り上げられるクエリ問題で「N+1クエリ問題」というのがあります。
-> これはこのセクションで説明するEagerロードで解決できます。<br>
-> ここではよくある例を参考にして説明していきます。
+> データベースで、2つのテーブルから関連した値を１つのクエリで取得が可能になるのがEagerLoading。
+これで「N＋１問題」という、クエリの発行回数が過剰に増えて、サーバーサイドでタイムアウトエラーなどの不具合を起こしてしまう現象を避けることができる。
+
+>ようは、複数のテーブルからそれぞれ関連しているデータを効率よく１クエリで取得できる。
+Laravelでは、このEagerLoadingを「with」関数で表現する。
+
 
 <br>
 
