コマンド以外の文字をコメント化
コメントとコマンドの分離
alias の typo修正

--- a/1.BuildApp.md
+++ b/1.BuildApp.md
@@ -40,13 +40,16 @@ https://chigusa-web.com/blog/vs-code-install/)
 6. 以下のコマンドでLaravelプロジェクトを作成する。(bashをzshに変更可)
 
 ~~~
-Mac: curl -s "https://laravel.build/example-app" | bash 
+# Mac
+curl -s "https://laravel.build/example-app" | bash
 ~~~
 ~~~
-Win: curl -s https://laravel.build/example-app | bash
+# Windows
+curl -s https://laravel.build/example-app | bash
 ~~~
 ~~~
-Lin: curl -s https://laravel.build/example-app | bash 
+# Linux
+curl -s https://laravel.build/example-app | bash
 ~~~
 
 
@@ -72,10 +75,12 @@ code .
 9. sailコマンドのalias作成
 > sail コマンドを実行するのに「./vendor/bin/sail」と入力しないといけく、不便なため、alias を指定する。
 ~~~
-bash -> alias sail = '[ -f sail ] && bash sail || bash vendor/bin/sail'
+# bash
+alias sail='[ -f sail ] && bash sail || bash vendor/bin/sail'
 ~~~
 ~~~
-zsh -> alias sail='./vendor/bin/sail'
+# zsh
+alias sail='./vendor/bin/sail'
 ~~~
 
 10. sailでプロジェクトを起動してみる。
